<resources>
    <string name="app_name">MyIOTProject</string>
    <string name = "Mo">Mo</string>
    <string name = "Dong">Dong</string>
    <string name="id_home_not_exist">ID Nhà không tồn tại.</string>
    <string name="sign_up_successfully">Đăng ký thành công.</string>
    <string name="sign_in_successfully">Đăng nhập thành công.</string>
    <string name="sign_in_fail">Đăng nhập thất bại.</string>
    <string name="user_already_register">Tên đăng nhập đã tồn tại.</string>
    <string name="password_do_not_match">Mật khẩu xác nhận không khớp. </string>
    <string name="please_fill_in_all_required_filed">Vui lòng điền thông tin.</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="user_name">Tài Khoản</string>
    <string name="password">Mật Khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="IDHome">ID Nhà</string>
    <string name="please_waiting">Vui lòng đợi...</string>
    <string name="find_ssid_wifi">Tìm SSID của Wifi</string>
    <string name="ssid">Wifi SSID</string>
    <string name="Main">Trang Chủ</string>
    <string name="config">Config ESP</string>
    <string name="setting">Cài đặt</string>
    <string name="feedback">Phản hồi</string>
    <string name="help">Trợ giúp</string>
    <string name="sign_up_account">Chưa có tài khoản? Đăng ký.</string>
    <string name="smarthome">Smart Home</string>
    <string name="kind_ofdevice">Loại thiết bị</string>
    <string name="out">Thoát</string>
    <string name="ok">Đồng ý</string>
    <string name="connect_wifi">Vui lòng kết nối Wifi</string>
    <string name="remember_account">Ghi nhớ tài khoản.</string>
    <string name="forgot_password">Quên mật khẩu.</string>
    <string name="logout">Đăng Xuất</string>
    <string name="passLengthError">Mật khẩu ít nhất 5 ký tự</string>
    <string name="userLengthError">Tài khoản ít nhất 5 ký tự</string>
    <string name="want_exit">Bạn muốn đăng xuất ?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="error">Lỗi</string>
    <string name="account_not_exist">Tài khoản không tồn tại</string>
    <string name="wrong_password">Mật khẩu sai</string>
    <string name="humidity">Độ ẩm:</string>
    <string name="temperature">Nhiệt độ:</string>
    <string name="turn_off_all_devices">Tắt tất cả thiết bị</string>
    <string name="turned_off_all_devices">Đã tắt tất cả thiết bị</string>
    <string name="inLevel">Mở mức </string>
    <string name="off">Tắt</string>
    <string name="list_roon">Danh Sách Phòng</string>
    <string name="controlTV">Điều khiển chi tiết</string>
    <string name="turn_on_device_first">Vui lòng bật thiết bị trước khi điều chỉnh mức</string>
    <string name="level">MỨC</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="turn_on_tv_first">Vui lòng bật TV trước khi điều khiển</string>
    <string name="timer">Hẹn giờ</string>
    <string name="turnOn_Internet_to_continue">Không có kết nối, hãy bật Wifi hoặc data để tiếp tục</string>
    <string name="noInternet">Mất kết nối</string>
    <string name="haveInternet">Đã kết nối</string>
    <string name="feedbackFrom">Phản hồi từ </string>
    <string name="chooseEmailClient">Chọn trình Email</string>
</resources>
