<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"

        >
        <item
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/Main"
            android:id="@+id/itemTrangchu"
            />
        <item
            
            android:icon="@drawable/icon_backup"
            android:title="@string/config"
            android:id="@+id/itemConfig"
            />
        <item

            android:icon="@drawable/icon_setting"
            android:title="@string/setting"
            android:id="@+id/itemSetting"
            />
        <item
            android:icon="@drawable/icon_feedback"
            android:title="@string/feedback"
            android:id="@+id/itemFeedBack"
            />
        <item
            android:icon="@drawable/iconfacebook"
            android:title="Facebook"
            android:id="@+id/itemFacebook"
            />
        <item
            android:icon="@drawable/icon_help"
            android:title="@string/help" />

    </group>



</menu>