<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activity.DangNhapActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/KhungDangNhap"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/size10dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size40dp" />
    <LinearLayout
        android:id="@+id/KhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size20dp"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:textColorHint="@color/colorTextHint"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyAppearance"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:padding="@dimen/size10dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/cursor"
                android:theme="@style/EditTextTheme"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:textColorHint="@color/colorTextHint"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:padding="@dimen/size10dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/cursor"
                android:theme="@style/EditTextTheme"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:textColorHint="@color/colorTextHint"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:padding="@dimen/size10dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/cursor"
                android:theme="@style/EditTextTheme"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:textColorHint="@color/colorTextHint"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MyAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtIDHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IDHome"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:padding="@dimen/size10dp"
                android:textColor="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/cursor"
                android:theme="@style/EditTextTheme"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20dp"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>
</RelativeLayout>