<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="13">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="@dimen/size0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtNameRoomOfDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/size0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtNameDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size14sp"

                />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNhietDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size30sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/imgIconDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="5">

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/OFF"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Switch
                    android:id="@+id/onOff"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:theme="@style/SCBSwitch" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ON"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size30sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="@dimen/size250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:weightSum="5">

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/level"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:id="@+id/seekbar"
                android:thumbTint="@color/colorWhite"
                android:theme="@style/MySeekBarTheme"
                />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/myRelative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btnControlTv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size25dp"
                android:layout_centerInParent="true"
                android:background="@drawable/custombutton2"
                android:padding="@dimen/size5dp"
                android:text="@string/controlTV"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/size8sp" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="2"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/custombutton2"
            android:text="@string/timer"
            android:textColor="@color/colorTextHint"
            android:layout_centerInParent="true"
            android:textSize="@dimen/size8sp"


            />

    </RelativeLayout>
</LinearLayout>